--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "description": "Fetch and display Github user profiles",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server"
   },
   "author": "Basil Meer",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "jshint": "^2.9.5",
+    "html-webpack-plugin": "^3.1.0",
+    "jshint": "^2.10.2",
     "jshint-loader": "^0.8.4",
     "node-libs-browser": "^2.1.0",
-    "html-webpack-plugin": "^3.1.0",
-    "babel-preset-env": "^1.6.1",
-    "webpack": "^4.7.0"
+    "webpack": "^4.7.0",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
     "prop-types": "^15.6.1",
