--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.3.2"
   }
 }
