--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "cheerio": "^1.0.0-rc.3",
+    "html-minifier": "^4.0.0",
+    "iconv-lite": "^0.4.24",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
     "prop-types": "^15.6.1",
